--- a/sass/abstract/_variables.scss
+++ b/sass/abstract/_variables.scss
@@ -1,14 +1,14 @@
 //Colors
-$color-primary: "#ff9a00";
-$color-secondary: "#ff165d";
-$color-grey-1: "#6e7c7c";
-$color-grey-2: "#435560";
-$color-grey-3: "#92967d";
-$color-grey-4: "#c8c6a7";
+$color-primary: #ff9a00;
+$color-secondary: #ff165d;
+$color-grey-1: #6e7c7c;
+$color-grey-2: #435560;
+$color-grey-3: #92967d;
+$color-grey-4: #c8c6a7;
 
 //Form colors
-$color-error: "#ff4646";
-$color-success: "#a7ff83";
+$color-error: #ff4646;
+$color-success: #a7ff83;
 
 //Font family
 $content: "Open sans", sans-serif;
